--- a/html_beforeAfter/style.css
+++ b/html_beforeAfter/style.css
@@ -1,4 +1,5 @@
-/*work**/
+
+/* Work area for position absolute and relative */
 .work{
     position: relative;
     width: 600px;
@@ -45,3 +46,82 @@
 .work-img img{
     width: 100%;
 }
+/* Service Area  for Before and After Exmample*/
+/* Before Example with <a> tag*/
+.service-area{
+    width:600px;
+}
+.service img{
+    width:100%;
+}
+
+.service a{
+    position: relative;
+    display: block;
+}
+
+.service a::before{
+    position: absolute;
+    content: "";
+    top:0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: #000;
+    opacity: 0;
+    transition: .3s;
+}
+.service a:hover::before{
+    opacity: 0.6;
+}
+/* End of Before Example with <a> tag*/
+
+/* Before and After Example with <a> tag*/
+/*============Before===================*/
+.service-after{
+    margin-top: 20px;
+}
+.service-after img{
+    width: 100%;
+}
+.service-after a{
+    position: relative;
+    display: block;
+}
+.service-after a::before{
+    position: absolute;
+    content: "";
+    top:0;
+    background: #000;
+    height: 100%;
+    width: 0%;
+    opacity: 0.7;
+    transition: .3s;
+}
+
+.service-after a:hover::before{
+width: 50%;
+}
+
+
+/*===============After================*/
+.service-after a{
+    position: relative;
+    display: block;
+}
+.service-after a::after{
+    position: absolute;
+    content: "";
+    top:0;
+    right: 0;
+    background: #000;
+    height: 100%;
+    width: 0%;
+    opacity: 0.7;
+    transition: .3s;
+}
+
+.service-after a:hover::after{
+width: 50%;
+}
+/* End of Before & After Example with <a> tag*/
